# fraud-detection-ml

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  schema.yaml  setup.py  template.py
.astro/: config.yaml
.dvc/: config
artifacts/data_transformation/: final_features.json  iv_rankings.csv  scaler.pkl  y_test.pkl  y_train.pkl  y_validate.pkl
artifacts/model_evaluation/: evaluation_results.json
artifacts/model_trainer/models/: logistic_regression.pkl  random_forest.pkl  xgboost.pkl
bento_service/: bentofile.yaml  save_model.py  service.py
config/: config.yaml
dags/: fraud_detection_dag.py
dashboard/: app.py  requirements.txt
models/: evaluation_results.json  final_features.json  hyperparameters.json  splits.json
notebooks/: 01_eda.ipynb  02_timeseries.ipynb  03_feature_engineering.ipynb  04_modelling.ipynb  05_evaluation.ipynb
src/frauddetection/: __init__.py
src/frauddetection.egg-info/: PKG-INFO  SOURCES.txt
src/frauddetection/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/frauddetection/config/: configuration.py
src/frauddetection/entity/: config_entity.py
src/frauddetection/pipeline/: stage_01_data_ingestion.py  stage_02_data_transformation.py  stage_03_model_trainer.py  stage_04_model_evaluation.py
src/frauddetection/utils/: common.py
